--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 *{
   margin: 0;
   box-shadow: none;
+  overflow-x: none; 
 }
 
 
@@ -218,38 +219,43 @@ a{
 /*como funciona*/
 .funciona{
   width: 100%;
-  height: 600px;
-  margin: 10px;
+  height: 60rem;
+  margin: 20px;
   float: right;
+  margin-bottom: 30px;
 }
 
 .funciona2{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  height: 250px;
-  margin: 5px;
-  margin-left: 40px;
-  gap-left: 20px;
+  height: 200px;
+  width: 60%;
+  margin-left: 20px;
+  padding-left: 70px;
+  gap: 50px;
 }
 
 #comofunciona {
   color: #77bbb3;
   text-align: center;
+  margin-bottom: 100px;
+  margin-top: 50px;
   font: italic 20px;
   font-family: Montserrat;
   font-weight: initial;
 }
 
 #telefone {
-  margin-left: 30px;
+  margin-left: 60px;
   float: left;
   width: 30%;
 }
 
 
 .fototipos {
+  height: 150px;
+  width: 150px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -259,7 +265,7 @@ a{
 
 .funcionaP {
   color: #77bbb3;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .funcionatipos h3 {
@@ -268,6 +274,7 @@ a{
 }
 
 .funcionatipos {
+  width: 60%;
   display: flex;
   flex-direction: column;
 }
@@ -280,3 +287,114 @@ a{
   text-decoration: none;
   font-size: 25px;
 }
+
+/**/
+
+/*tipos de coisas para fazer*/
+.certificadosTd{
+  width: 100%;
+  height: 120rem;
+  margin-top: 100px;
+}
+
+#certificados {
+  font: italic;
+  font-size: 50px;
+  font-weight: normal;
+  color: #77bbb3;
+  text-align: center;
+}
+
+.tiposfts {
+  display: inline;
+  justify-content: space-between;
+  margin: 7% 8% 8% 7%;
+}
+
+.ir {
+  margin: -1% 5% 8% 7%;
+  color: #6f9d98;
+  flex-direction: column;
+  align-items: center;
+  height: 200px;
+  width: 10%;
+  padding: 5% 5% 5% 5%;
+  display: inline-flex;
+  border: black solid 2px;
+  border-radius: 20px;
+  box-shadow: 24px 24px 48px #e3e3e3, -24px -24px 48px #ffffff;
+}
+
+.ir .butaoP {
+  height: 50px;
+  font-size: 12px;
+  width: 130px;
+  padding: 3px 3px 3px 3px;
+  margin: 8px 4px 4px 8px;
+  border-radius: 10px;
+}
+
+/**/
+
+/*menu final*/
+footer {
+  background-color: #446864;
+  width: 100%;
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#ftlgf {
+  margin: 2% 2% 2%;
+}
+
+#menuf {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  padding: -3% 30% 8% 4%;
+  justify-content: space-between;
+  margin: -4% 20% 5% 6%;
+  border-bottom: black solid 1px;
+}
+
+.menufo {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-left: 38%;
+  text-decoration: none;
+  color: black;
+  width: 20%;
+  height: 70%;
+  padding: 5px 10px 2px 4px;
+  margin-top: none;
+}
+
+.menufo a {
+  text-decoration: none;
+  color: black;
+}
+
+.menufo a :hover {
+  color: darkgrey;
+}
+
+.contato {
+  display: flex;
+  flex-direction: column;
+  float: right;
+}
+
+#mobile {
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-bottom: 1%;
+}
+
+#ftcll {
+  display: block;
+  margin: 1% 8% 5% 5%;
+}
+
