--- a/src/componentes/Menu.css
+++ b/src/componentes/Menu.css
@@ -3,7 +3,7 @@
 /*menuzinho*/
 /*menu*/
 
-
+/*
 .menu {
     width: 100%;
     height: 60px;
@@ -61,13 +61,157 @@
   #minha_conta {
     float: right;
   }
+
+.hamburgue
+{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#checkbox-menu{
+  position: absolute;
+  opacity: 0;
+}
+
+label{
+  cursor: pointer;
+  position: relative;
+  display: block;
+  height: 22px;
+  width: 30px;
+}
+
+label span{
+  position: absolute;
+  display: block;
+  height: 5px;
+  width: 100%;
+  border-radius: 30px;
+  background: #000;
+  transition: 0.25s ease-in-out;
+}
+
+label span:nth-child(1){
+  top: 0;
+}
+
+label span:nth-child(2){
+  top: 8px;
+}
+
+label span:nth-child(3){
+  top: 16px;
+}
+*/
+
+a{
+  color: #77bbb3;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+#sdq {
+  font: "Belleza", italic;
+  font-size: 28px;
+  letter-spacing: 3px;
+  color: #77bbb3;
+  text-transform: uppercase;
+}
+
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 8vh;
+}
+
+.nav-list{
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li{
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+
+.mobile-menu div{
+  width: 32px;
+  height: 4px;
+  border-radius: 3px;
+  background: #77bbb3;
+  margin: 8px;
+}
+
+.mobile-menu{
+  display: none;
+  cursor: pointer;
+}
+
+
+@media (max-width:999px){
+
+  body{
+    overflow-x: hidden;
+  }
+
+  .nav-list{
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #77bbb3;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+
+  .nav-list li{
+    margin-left: 0;
+    opacity: 0;
+    color: #fff;
+  }
+
+  .mobile-menu{
+    display: block;
+  }
+
+  .nav-list.active { 
+    transform: translateX(0);
+  }
+
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+} 
+  
+
+}
+
+
+
+/*responsivo
   
 @media only screen  and (max-width:700px){
   
-.menu {
-  height: 40px;
-  gap: 5px 10px;
+.nav-list {
+  position: absolute;
+  top: 8vh;
+  right: 0;
 }
+
 
 #fotologo {
   left: 60px;
@@ -84,7 +228,7 @@
 
 
 li {
-  margin: 10px;
+  margin: 5px;
 }
 
 li a {
@@ -92,6 +236,7 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
   transition: 0.2s;
+  font-size: 8px;
 }
 
 li a:hover {
@@ -104,4 +249,4 @@ li a:hover {
 }
 
   
-}
+}*/
