--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@
 /*botoes login e cadastro juntos*/
 .butoesPjuntos{
   margin: 40px;
-  gap: 10px;
+  gap: 40px;
 }
 
 /*Parte de fazer Login*/
@@ -116,8 +116,8 @@
   background-image: url(./img/fundologin.png);
   width: 100%;
   height: 1020px;
-  max-width: auto;
-  margin-top: 10px;
+  background-size: cover;
+  justify-content: center;
 
 }
 
@@ -196,7 +196,7 @@ a{
 
 #esqueci_senha{
   background-color: white;
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
   border: #A69573;
   border-radius: 5px;
   font-size: 15px;
@@ -206,7 +206,14 @@ a{
 #esqueci_senha:hover{
   border:#A69573 solid 2px;
   transform: scale(1.0);
+  transform: translateY(-7px);
+  box-shadow: #a69573 5px 2px 2px 5px;
+  opacity: 0.5px;
 
+}
+
+#esqueci_senha:active{
+  transform: translateY(-1px);
 }
 
 
@@ -243,13 +250,13 @@ a{
 #telefone {
   margin-left: 60px;
   float: left;
-  width: 30%;
+  width: 70vh;
 }
 
 
 .fototipos {
-  height: 150px;
-  width: 150px;
+  height: 25vh;
+  width: 25vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -310,9 +317,9 @@ a{
   color: #6f9d98;
   flex-direction: column;
   align-items: center;
-  height: 200px;
-  width: 10%;
-  padding: 5% 5% 5% 5%;
+  height: 300px;
+  width: 20%;
+  padding: 5%;
   display: inline-flex;
   border: black solid 2px;
   border-radius: 20px;
