--- a/src/componentes/Menu.css
+++ b/src/componentes/Menu.css
@@ -62,50 +62,8 @@
     float: right;
   }
 
-.hamburgue
-{
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-#checkbox-menu{
-  position: absolute;
-  opacity: 0;
-}
-
-label{
-  cursor: pointer;
-  position: relative;
-  display: block;
-  height: 22px;
-  width: 30px;
-}
-
-label span{
-  position: absolute;
-  display: block;
-  height: 5px;
-  width: 100%;
-  border-radius: 30px;
-  background: #000;
-  transition: 0.25s ease-in-out;
-}
-
-label span:nth-child(1){
-  top: 0;
-}
-
-label span:nth-child(2){
-  top: 8px;
-}
-
-label span:nth-child(3){
-  top: 16px;
-}
-*/
-
+/*
 a{
   color: #77bbb3;
   text-decoration: none;
@@ -199,6 +157,7 @@ nav{
   
 
 }
+*/
 
 
 
@@ -250,3 +209,121 @@ li a:hover {
 
   
 }*/
+
+
+#hamburgue{
+  display: none;
+
+}
+
+@media (max-width:999px){
+
+nav ul{
+  display: flex;
+  flex-direction: column;
+}
+
+li{
+  display: block;
+  list-style: none;
+  margin: 10px;
+  padding: 5px;
+  text-align: center;
+}
+
+li :hover{
+  background-color: aquamarine;
+}
+
+
+
+.menu{
+  display: none;
+}
+
+.mobile-menu div{
+  width: 32px;
+  height: 4px;
+  border-radius: 3px;
+  background: #77bbb3;
+  margin: 8px;
+  cursor: pointer;
+}
+
+
+/**/
+
+body{
+  overflow-x: hidden;
+}
+
+header{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+header h3{
+  text-align: center;
+  font-size: 25px;
+  margin: 10px;
+  letter-spacing: 2px;
+  color: #77bbb3;
+}
+
+
+span#hamburgue{
+  color:#77bbb3;
+  width: 50%;
+  display: block;
+  text-align: center;
+  font-size: 50px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+span#hamburgue:hover{
+  background-color: #77bbb3;
+  color: #fff;
+}
+
+
+
+  body{
+    overflow-x: hidden;
+  }
+
+  #itens{
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #77bbb3;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+
+  #itens li{
+    margin-left: 0;
+    opacity: 0;
+    color: #fff;
+  }
+
+  span#hamburgue{
+    display: block;
+  }
+
+  span#hamburgue :active { 
+    transform: translateX(0);
+  }
+
+}
